@@ -5,7 +5,7 @@
 
 	<groupId>io.freeze-dolphin</groupId>
 	<artifactId>ultimate-generators</artifactId>
-	<version>1.0.3</version>
+	<version>1.0.4</version>
 
 	<name>UltimateGenerators</name>
 
